--- a/weather-app.html
+++ b/weather-app.html
@@ -13,30 +13,22 @@
 </head>
 
 <body>
-  <a class="alert-primary" id="get-weather" onclick="getWeather();">Get Local Weather</a>
   <div class="message">
   </div>
-  <div class="container-fluid">
-  <h1>Hello World!</h1>
-  <p>Resize the browser window to see the effect.</p>
-  <p>The columns will automatically stack on top of each other when the screen is less than 768px wide.</p>
-  <div class="row">
-    <div class="col-sm-4" style="background-color:lavender;">.col-sm-4</div>
-    <div class="col-sm-4" style="background-color:lavenderblush;">.col-sm-4</div>
-    <div class="col-sm-4" style="background-color:lavender;">.col-sm-4</div>
-  </div>
-</div>
+  <h1 id="get-weather" onclick="getWeather();">Get Local Weather</h1>
   <div class="container-fluid">
     <div class="city text-center">
     </div>
     <div class="row">
       <div class="col-sm-4">
-        <div class="weather-conditions right">
+        <div class="temp">
+        </div>
+        <div class="weather-conditions left">
         </div>
       </div>
 
       <div class="col-sm-4">
-        <div class="weather-conditions left">
+        <div class="weather-conditions right">
         </div>
       </div>
 
@@ -85,8 +77,8 @@
         $.getJSON("http://api.openweathermap.org/data/2.5/weather?lat=" + latitude + "&lon=" + longitude + "&APPID=5dee5d560c59fdf11b33686537753305&callback=?", function(json){
         // $(".message").html(JSON.stringify(json));
         $(".city").html(json.name);
-        $(".weather-conditions.left").html(json.main.temp + " " +
-          json.main.pressure + " " + json.main.humidity + " " + json.wind.speed + " "
+        $(".temp").html(json.main.temp);
+        $(".weather-conditions.left").html(json.main.pressure + " " + json.main.humidity + " " + json.wind.speed + " "
           + json.weather[0].icon);
         $(".weather-conditions.right").html(json.weather[0].description);
           // + json.weather[0].main + " " + json.main.temp + " " + json.sys.country + " " + json.name
